# tasks

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: bot.c  bot.h  command_manager.c  command_manager.h  credentials.c  credentials.h  database.c  database.h  main.c  map.c  map.h  status.c  status.h
src/core/: base64.c  base64.h  database.c  database.h  net.c  net.h  rest.c  rest.h  websocket.c  websocket.h
src/discord/: application.h  bot.c  bot.h  command.c  command.h  command_manager.c  command_manager.h  component.c  component.h  credentials.c  credentials.h  dispatch.c  dispatch.h  gateway.c  gateway.h  snowflake.c  snowflake.h  user.h
src/discord/types/: application.c  interaction.c  interaction.h  member.c  member.h  user.c
